--- a/package.json
+++ b/package.json
@@ -8,27 +8,33 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.3",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.1",
     "axios": "^1.3.2",
+    "css-select": "^5.1.0",
     "dotenv": "^16.0.3",
-    "firebase": "^9.17.2",
     "framer-motion": "^9.0.7",
     "i18next": "^22.4.10",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
+    "svgo": "^3.0.2",
     "swiper": "^9.1.1",
+    "tsutils": "^3.21.0",
+    "typescript": "4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
